syntax = "proto3";

import "polykey/v1/nodes/nodes.proto";

package polykey.v1.vaults;

// Shared.

//Note: I'm thinking this should be a vault info that includes vault_name and vault_id
// and only use vault_name when we are specifying a vaultNameOrId.
message Vault {
  string name_or_Id = 1;
}

// client specific
message List {
  string vault_name = 1;
  string vault_id = 2;
}

message Rename {
  Vault vault = 1;
  string new_name = 2;
}

message Mkdir {
  Vault vault = 1;
  string dir_name = 2;
  bool recursive = 3;
}

message Pull {
  Vault vault = 1;
  polykey.v1.nodes.Node node = 2;
  Vault pull_vault = 3;
}

message Clone {
  Vault vault = 1;
  polykey.v1.nodes.Node node = 2;
}

message Stat {
  string stats = 1;
}

message PermSet {
  Vault vault = 1;
  polykey.v1.nodes.Node node = 2;
}

message PermUnset {
  Vault vault = 1;
  polykey.v1.nodes.Node node = 2;
}

message PermGet {
  Vault vault = 1;
  polykey.v1.nodes.Node node = 2;
}

message Permission {
  string node_id = 1;
  string action = 2;
}

message Version {
  Vault vault = 1;
  string version_id = 2;
}

message VersionResult {
  bool is_latest_version = 1;
}

message Log {
  Vault vault = 1;
  int32 log_depth = 3;
  string commit_id = 4;
}

message LogEntry {
  string oid = 1;
  string committer = 2;
  uint64 time_stamp = 4;
  string message = 3;
}

// Agent specific.
message InfoRequest {
  Vault vault = 1;
  polykey.v1.nodes.Node node = 2;
  string action = 3;
}

message PackChunk {
  bytes chunk = 1;
}

message PackRequest {
  string id = 1;
  bytes body = 2;
}

message NodePermission {
  string node_id = 1;
  string vault_id = 2;
}

message NodePermissionAllowed {
  bool permission = 1;
}

